# DllProxy-rs

./: .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md
src/: dll32.rs  dll64.rs  main.rs  vc.cmd
src/scripts/: build-dll.bat
