[package]
name = "dll_proxy_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pelite = "0.9.1"
clap = { version = "3.1.6", features = ["derive"] }
colored = "2"
indoc = "1.0.7"
handlebars = "4.3.5"
serde_json = "1.0.87"

#[[bin]]
#name = "dllproxy_64"
#path = "src/dll64.rs"

#[[bin]]
#name = "dllproxy_32"
#path = "src/dll32.rs"